--- a/cadastro.html
+++ b/cadastro.html
@@ -16,6 +16,9 @@
     <label for="">Nome:</label>
     <input type="text" class="form-control" id="nomeUser" />
     <br>
+    <label for="">E-mail</label>
+    <input type="email" class="form-control" id="EmailUser">
+    <br>
     <button type="button" class="btn btn-success" onclick="salvarUser()">Salvar</button>
   </div>
   <br>
@@ -23,6 +26,7 @@
     <table class="table table-striped" id="tabela">
       <tr>
         <th>Nome Usuario</th>
+        <th>Email</th>
         <th>Acões</th>
       </tr>
     </table>
